discussion/kv_engine/157996/157996_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39338 magma-kvstore: Add Status::DiskFull error code to rollback errors

Change-Id: I9abf47ccd5ff8075e3c9f4979d4ea6ef75dd06f1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Sarath Lakshman
Date: 2021-07-21 15:57:30.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-21 16:14:08.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37952/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc(2316): error C2039: "DiskFull": is not a member of "magma::Status" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37952/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10761/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2316:18: error: no member named "DiskFull" in "magma::Status" [clang-diagnostic-error]
    case Status::DiskFull:
                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10761/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2316:18:
error: no member named "DiskFull" in "magma::Status" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10761/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32357/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2316:18:
error: no member named "DiskFull" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32357/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11432/ : FAILURE

Compile error at [2021-07-21T16:00:05.306Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2316:18:
error: no member named "DiskFull" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11432/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/376/ : FAILURE

Compile error at [2021-07-21T16:01:51.222Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2316:18:
error: no member named "DiskFull" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/376/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12870/ : FAILURE

Compile error at [2021-07-21T16:00:36.615Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2316:18:
error: no member named "DiskFull" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12870/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20420/ : FAILURE

Compile error at [2021-07-21T16:03:13.143Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2316:18:
error: no member named "DiskFull" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20420/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12523/ : FAILURE

Compile error at [2021-07-21T16:00:24.998Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2316:18:
error: ?DiskFull? is not a member of ?magma::Status?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12523/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9419/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12347/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/348/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Sarath Lakshman
Date: 2021-07-21 16:23:45.000000000
Message: 
Patch Set 1:

Dependent magma change, http://review.couchbase.org/c/magma/+/157645
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-21 17:50:47.000000000
Message: 
Patch Set 1:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20423/ : FAILURE

Compile error at [2021-07-21T17:37:18.276Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2316:18:
error: no member named "DiskFull" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20423/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37955/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc(2316): error C2039: "DiskFull": is not a member of "magma::Status" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37955/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10764/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2316:18: error: no member named "DiskFull" in "magma::Status" [clang-diagnostic-error]
    case Status::DiskFull:
                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10764/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2316:18:
error: no member named "DiskFull" in "magma::Status" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10764/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32360/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2316:18:
error: no member named "DiskFull" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32360/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11435/ : FAILURE

Compile error at [2021-07-21T17:35:32.715Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2316:18:
error: no member named "DiskFull" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11435/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/379/ : FAILURE

Compile error at [2021-07-21T17:34:37.715Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2316:18:
error: no member named "DiskFull" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/379/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12873/ : FAILURE

Compile error at [2021-07-21T17:34:20.763Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2316:18:
error: no member named "DiskFull" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12873/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12526/ : FAILURE

Compile error at [2021-07-21T17:36:31.878Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2316:18:
error: ?DiskFull? is not a member of ?magma::Status?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12526/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9422/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12350/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/351/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-07-22 09:04:56.000000000
Message: 
Patch Set 1: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
